--- a/Shri/Shri/Shri.csproj
+++ b/Shri/Shri/Shri.csproj
@@ -42,8 +42,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="GameObject.cs" />
+    <Compile Include="GameScreen.cs" />
+    <Compile Include="GameScreens\InitialGameScreen.cs" />
     <Compile Include="Input.cs" />
-    <Compile Include="InputManager.cs" />
+    <Compile Include="Managers\GameScreenManager.cs" />
+    <Compile Include="Managers\InputManager.cs" />
     <Compile Include="Shri.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
