Added ContentManager for managing textures, audio, and other things in the future Created Sprites folder

--- a/Shri/Shri/Shri.csproj
+++ b/Shri/Shri/Shri.csproj
@@ -45,6 +45,7 @@
     <Compile Include="GameScreen.cs" />
     <Compile Include="GameScreens\InitialGameScreen.cs" />
     <Compile Include="Input.cs" />
+    <Compile Include="Managers\ContentManager.cs" />
     <Compile Include="Managers\GameScreenManager.cs" />
     <Compile Include="Managers\InputManager.cs" />
     <Compile Include="Shri.cs" />
@@ -60,7 +61,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\bud.png">
+    <Content Include="Content\Sprites\bud.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Icon.ico" />
