--- a/Shri/Shri/Shri.csproj
+++ b/Shri/Shri/Shri.csproj
@@ -41,7 +41,7 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="GameObject.cs" />
+    <Compile Include="FramedSprite.cs" />
     <Compile Include="GameScreen.cs" />
     <Compile Include="GameScreens\InitialGameScreen.cs" />
     <Compile Include="Input.cs" />
@@ -51,6 +51,7 @@
     <Compile Include="Shri.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Size.cs" />
     <Compile Include="Sprite.cs" />
   </ItemGroup>
   <ItemGroup>
