Added Font.cs back into proj Fixed variables

--- a/Shri/Shri/Shri.csproj
+++ b/Shri/Shri/Shri.csproj
@@ -41,6 +41,7 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Font.cs" />
     <Compile Include="FramedSprite.cs" />
     <Compile Include="GameScreen.cs" />
     <Compile Include="GameScreens\InitialGameScreen.cs" />
