Added collision detection from origin of objects Added Wall objects

--- a/Shri/Shri/Shri.csproj
+++ b/Shri/Shri/Shri.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Sprites\SprFill.cs" />
     <Compile Include="Sprites\SprPlayer.cs" />
     <Compile Include="Sprites\SprTitle.cs" />
+    <Compile Include="Wall.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
