Added sln back for intellisense

--- a/Shri/.vscode/tasks.json
+++ b/Shri/.vscode/tasks.json
@@ -19,7 +19,7 @@
             "type": "process",
             "args": [
                 "build",
-                "${workspaceFolder}/Shri/Shri.csproj",
+                "${workspaceFolder}/Shri.csproj",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
@@ -31,7 +31,7 @@
             "type": "process",
             "args": [
                 "publish",
-                "${workspaceFolder}/Shri/Shri.csproj",
+                "${workspaceFolder}/Shri.csproj",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
@@ -44,7 +44,7 @@
             "args": [
                 "watch",
                 "run",
-                "${workspaceFolder}/Shri/Shri.csproj",
+                "${workspaceFolder}/Shri.csproj",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
